input container margin bottom removed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .inputContainer{
-    @apply flex flex-col mb-4;
+    @apply flex flex-col;
 }
 .inputContainer label{
     @apply mb-2;
