--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,9 @@
 .primaryButton{
     @apply bg-blue-500 px-4 py-2 text-white rounded hover:bg-blue-600 cursor-pointer transition-colors disabled:bg-gray-400 disabled:cursor-not-allowed;
 }
+.errorButton{
+    @apply bg-red-500 px-4 py-2 text-white rounded hover:bg-red-600 cursor-pointer transition-colors disabled:bg-gray-400 disabled:cursor-not-allowed;
+}
 .outlineButton{
     @apply border border-blue-500 rounded px-4 py-2 disabled:border-gray-400 disabled:text-gray-500 disabled:cursor-not-allowed;
 }
