--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@
     @apply text-sm font-medium px-4 py-2 border border-blue-600 bg-blue-500 text-white rounded hover:bg-blue-600 cursor-pointer transition-colors disabled:bg-gray-400 disabled:border-gray-400 disabled:cursor-not-allowed;
 }
 .errorButton{
-    @apply bg-red-500 px-4 py-2 text-white rounded hover:bg-red-600 cursor-pointer transition-colors disabled:bg-gray-400 disabled:cursor-not-allowed;
+    @apply text-sm font-medium px-4 py-2 border border-red-600 bg-red-500 text-white rounded hover:bg-red-600 cursor-pointer transition-colors disabled:bg-gray-400 disabled:border-gray-400 disabled:cursor-not-allowed;
 }
 .outlineButton{
     @apply border border-gray-300 rounded text-sm px-4 py-2 font-medium text-gray-700 hover:bg-gray-100 transition-colors disabled:border-gray-400 disabled:text-gray-500 disabled:bg-gray-100 disabled:cursor-not-allowed;
