--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html {
+    scroll-behavior: smooth;
+  }
 .inputContainer{
     @apply flex flex-col;
 }
