--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,15 @@ html {
 .inputErrorMessage{
     @apply text-xs text-red-500;
 }
+.paginateContainer{
+    @apply flex justify-center gap-3 flex-wrap;
+}
+.paginateContainer li a{
+    @apply w-10 h-10 cursor-pointer text-sm font-medium text-gray-500 border rounded-full flex justify-center items-center hover:border-blue-400 hover:bg-blue-50 hover:text-blue-500 transition-colors;
+}
+.paginateContainer li.selected a{
+    @apply bg-blue-500 text-white border-blue-500;
+}
+.paginateContainer li.previous.disabled a,.paginateContainer li.next.disabled a{
+    @apply bg-gray-100 text-gray-400 cursor-not-allowed hover:border-gray-200;
+}
